# sd-webapp

./: .env  .gitignore  README.md  app.py  main.py  parameters.yaml  pyproject.toml  requirements.txt
assets/: header.html  sd15_header.html  sdxl_header.html
libs/: callbacks.py  sd_ui_local.py  utilities.py  vars.py
libs/globals/: vars.py
libs/shared/: exceptions.py  parameters.py  session.py  settings.py  utils.py
libs/stablediffusion/: funcs.py  mergeops.py  metadata.py  sd15.py  sd15_merge.py  sdxl.py  sdxl_merge.py
pages/: explore_page.py  sd15_inpaint_page.py  sd15_page.py  sd15_tools_page.py  sdxl_inpaint_page.py  sdxl_page.py  sdxl_tools_page.py
