[project]
name = "sd-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers>=0.34.0",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "streamlit>=1.48.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.0",
]
